// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`For class emits declaration map: dts 1`] = `
"declare module \\"rollup-plugin-flat-dts\\" {
    export class BaseClass {
        foo(): string;
    }
    export class TestClass extends BaseClass {
        foo(): string;
    }
}
//# sourceMappingURL=index.d.ts.map
"
`;

exports[`For class emits declaration map: source map 1`] = `"{\\"version\\":3,\\"sources\\":[\\"src/tests/classes/classes.ts\\"],\\"names\\":[],\\"mappings\\":\\";IAAA,MAAM,OAAO,SAAS;QAEpB,GAAG,IAAI,MAAM,CAAA;KAId;IAED,MAAM,OAAO,SAAU,CAAA,QAAQ,SAAS;QAE7B,GAAG,IAAI,MAAM,CAAA;KAIvB\\",\\"file\\":\\"index.d.ts\\",\\"sourceRoot\\":\\"\\"}"`;

exports[`For class emits type definitions 1`] = `
"declare module \\"rollup-plugin-flat-dts\\" {
    export class BaseClass {
        foo(): string;
    }
    export class TestClass extends BaseClass {
        foo(): string;
    }
}
"
`;
